2010-03-12 Andrew Schofield <andrew@fire-salamander.co.uk>
* Added ability to save and load simple project files (ES, settings and
  viewed predictions).

2010-03-11 Andrew Schofield <andrew@fire-salamander.co.uk>
* Added application icon for frames.

2010-03-10 Andrew Schofield <andrew@fire-salamander.co.uk>
* Swapped save dialog order such that the configuration happens after choosing
  the filename.
* Added ability to save leaf output to Scalable Vector Graphics (svg) format.
* Fixed axes markers to extend as far as viewport.
* Show axes on program startup, when no leaf showing.
* Added PC info to display canvas. Also appears on output.
* Added option to disable PC info. Disabled by default.
* Made SVG output the default image format.

2010-03-09 Andrew Schofield <andrew@fire-salamander.co.uk>
* Removed menu items that either don't work or don't do anything yet.

LeafPredictor 0.8a

2009-02-11 Andrew Schofield <andrew@fire-salamander.co.uk>
* Added saving of predictions to project manager.

2008-11-28 Andrew Schofield <andrew@fire-salamander.co.uk>
* Made manual scale the default method on loading an eigensystem.

2008-11-07 Andrew Schofield <andrew@fire-salamander.co.uk>
* Fixed broken parser for LeafAnalyser files. LeafPredictor can now read
  eigensystems with more than 48 landmarks correctly.

2008-09-23 Andrew Schofield <andrew@fire-salamander.co.uk>
* Added faint background to unselected predictions to make the display more
  obvious.

LeafPredictor 0.8

2008-05-15 Andrew Schofield <andrew@fire-salamander.co.uk>
* Added option to remove landmarks from display.
* Added value field for manual scale slider.
* Adjusted manual scale multiplier to increase it by a factor of 2.
* Fixed antialiasing function for screenshots.
* Fixed Windows build system.
* Fixed nasty grey background for sliders on Windows.
* Improved Windows program icon.